Декоративные элемены промежуточное

--- a/catalog.html
+++ b/catalog.html
@@ -19,23 +19,24 @@
                         </a>
                         <ul class="site-navigation">
                             <li>
-                                <a href="catalog.html">Каталог</a>
+                                <a class="nav-main-item active-item"><span>Каталог</span></a>
                                 <span class="visually-hidden">Категории каталога</span>
-                                <div class="navigation-popup-wrap">
                                     <ul class="navigation-popup">
-                                        <li class="new-item"><a href="#">Новинки</a></li>
+                                        <li class="new-item"><a class="first-item"href="#">Новинки</a></li>
                                         <li><a>Сливочное</a></li>
                                         <li><a href="#">Щербеты</a></li>
                                         <li><a href="#">Фруктовый лед</a></li>
-                                        <li><a href="#">Мелонин</a></li>
+                                        <li><a class="last-item" href="#">Мелонин</a></li>
                                     </ul>
-                                </div>
                             </li>
-                            <li><a href="#">Доставка и оплата</a></li>
-                            <li><a href="#">О Компании</a></li>
+                            <li><a class="nav-main-item" href="#"><span>Доставка и оплата</span></a></li>
+                            <li><a class="nav-main-item" href="#"><span>О Компании</span></a></li>
                         </ul>
                         <div class="nav-btn-wrap">
-                            <button class="search-btn nav-btn">Поиск</button>
+                            <button class="search-btn nav-btn"><span class="visually-hidden">Поиск</span>
+                                <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="17" height="17" viewBox="0 0 17 17">
+                                <path fill="#fff" d="M16.958 15.527L11.75 10.32A6.455 6.455 0 0 0 13 6.5 6.5 6.5 0 1 0 6.5 13a6.465 6.465 0 0 0 3.839-1.263l5.205 5.204 1.414-1.414zM6.5 11C4.019 11 2 8.981 2 6.5S4.019 2 6.5 2 11 4.019 11 6.5 8.981 11 6.5 11z"/></svg>
+                            </button>
                             <span class="visually-hidden">Форма поиска</span>
                             <form class="search-btn-popup" name="search-form" id="search" action="https://echo.htmlacademy.ru"
                                 method="get">
@@ -43,7 +44,7 @@
                                 <input type="search" name="input-searh" id="what-search" placeholder="Что ищем?"><button
                                     class="visually-hidden">Найти</button>
                             </form>
-                            <button class="login-btn nav-btn">Вход</button>
+                            <button class="login-link nav-btn">Вход</button>
                             <span class="visually-hidden">Форма входа</span>
                             <form class="login-btn-popup" name="login-form" id="login" action="https://echo.htmlacademy.ru"
                                 method="post">
@@ -146,73 +147,73 @@
                             <img src="img/goods/ice-cream-1.jpg" width="267" height="267" alt="Мороженое сливочное с апельсиновым джемом и цитрусовой стружкой фото">
                             <p class="catalog-item-price">310₽<span class="weight">/кг</span></p>
                             <h3 class="catalog-item-title">Сливочное с апельсиновым джемом и цитрусовой стружкой</h3>
-                            <a href="#" class="btn">Купить</a>
+                            <a href="#" class="btn item-btn">Быстрый просмотр</a>
                         </li>
                         <li class="catalog-item">
                             <img src="img/goods/ice-cream-2.jpg" width="267" height="267" alt="Мороженое сливочно-кофейное с кусочками шоколада фото">
                             <p class="catalog-item-price">380₽<span class="weight">/кг</span></p>
                             <h3 class="catalog-item-title">Сливочно-кофейное с кусочками шоколада</h3>
-                            <a href="#" class="btn">Купить</a>
+                            <a href="#" class="btn item-btn">Быстрый просмотр</a>
                         </li>
                         <li class="catalog-item">
                             <img src="img/goods/ice-cream-3.jpg" width="267" height="267" alt="Мороженое сливочно-клубничное с присыпкой из белого шоколада фото">
                             <p class="catalog-item-price">355₽<span class="weight">/кг</span></p>
                             <h3 class="catalog-item-title">Сливочно-клубничное с присыпкой из белого шоколада</h3>
-                            <a href="#" class="btn">Купить</a>
+                            <a href="#" class="btn item-btn">Быстрый просмотр</a>
                         </li>
                         <li class="catalog-item">
                             <img src="img/goods/ice-cream-4.jpg" width="267" height="267" alt="Мороженое сливочное крем-брюле с карамельной подливкой фото">
                             <p class="catalog-item-price">415₽<span class="weight">/кг</span></p>
                             <h3 class="catalog-item-title">Сливочное крем-брюле с карамельной подливкой</h3>
-                            <a href="#" class="btn">Купить</a>
+                            <a href="#" class="btn item-btn">Быстрый просмотр</a>
                         </li>
                         <li class="catalog-item">
                             <img src="img/goods/ice-cream-5.jpg" width="267" height="267" alt="Мороженое сливочное с брусничным джемом фото">
                             <p class="catalog-item-price">325₽<span class="weight">/кг</span></p>
                             <h3 class="catalog-item-title">Сливочное с брусничным джемом</h3>
-                            <a href="#" class="btn">Купить</a>
+                            <a href="#" class="btn item-btn">Быстрый просмотр</a>
                         </li>
                         <li class="catalog-item">
                             <img src="img/goods/ice-cream-6.jpg" width="267" height="267" alt="Мороженое сливочно-черничное с цельными ягодами черники фото">
                             <p class="catalog-item-price">410₽<span class="weight">/кг</span></p>
                             <h3 class="catalog-item-title">Сливочно-черничное с цельными ягодами черники</h3>
-                            <a href="#" class="btn">Купить</a>
+                            <a href="#" class="btn item-btn">Быстрый просмотр</a>
                         </li>
                         <li class="catalog-item">
                             <img src="img/goods/ice-cream-7.jpg" width="267" height="267" alt="Мороженое сливочно-лимонное с карамельной присыпкой фото">
                             <p class="catalog-item-price">375₽<span class="weight">/кг</span></p>
                             <h3 class="catalog-item-title">Сливочно-лимонное с карамельной присыпкой</h3>
-                            <a href="#" class="btn">Купить</a>
+                            <a href="#" class="btn item-btn">Быстрый просмотр</a>
                         </li>
                         <li class="catalog-item">
                             <img src="img/goods/ice-cream-8.jpg" width="267" height="267" alt="Мороженое сливочное с шоколадной стружкой фото">
                             <p class="catalog-item-price">320₽<span class="weight">/кг</span></p>
                             <h3 class="catalog-item-title">Сливочное с шоколадной стружкой</h3>
-                            <a href="#" class="btn">Купить</a>
+                            <a href="#" class="btn item-btn">Быстрый просмотр</a>
                         </li>
                         <li class="catalog-item">
                             <img src="img/goods/ice-cream-9.jpg" width="267" height="267" alt="Мороженое сливочно-ванильное с кусочками шоколада фото">
                             <p class="catalog-item-price">440₽<span class="weight">/кг</span></p>
                             <h3 class="catalog-item-title">Сливочно-ванильное с кусочками шоколада</h3>
-                            <a href="#" class="btn">Купить</a>
+                            <a href="#" class="btn item-btn">Быстрый просмотр</a>
                         </li>
                         <li class="catalog-item">
                             <img src="img/goods/ice-cream-10.jpg" width="267" height="267" alt="Мороженое сливочноe с ментоловым сиропом фото">
                             <p class="catalog-item-price">435₽<span class="weight">/кг</span></p>
                             <h3 class="catalog-item-title">Сливочноe с ментоловым сиропом</h3>
-                            <a href="#" class="btn">Купить</a>
+                            <a href="#" class="btn item-btn item-btn">Быстрый просмотр</a>
                         </li>
                         <li class="catalog-item">
                             <img src="img/goods/ice-cream-11.jpg" width="267" height="267" alt="Мороженое сливочное с кусочками черного шоколада фото">
                             <p class="catalog-item-price">355₽<span class="weight">/кг</span></p>
                             <h3 class="catalog-item-title">Сливочное с кусочками черного шоколада</h3>
-                            <a href="#" class="btn">Купить</a>
+                            <a href="#" class="btn item-btn">Быстрый просмотр</a>
                         </li>
                         <li class="catalog-item">
                             <img src="img/goods/ice-cream-12.jpg" width="267" height="267" alt="Мороженое сливочное с мятным сиропом фото">
                             <p class="catalog-item-price">420₽<span class="weight">/кг</span></p>
                             <h3 class="catalog-item-title">Сливочное с мятным сиропом</h3>
-                            <a href="#" class="btn">Купить</a>
+                            <a href="#" class="btn item-btn">Быстрый просмотр</a>
                         </li>
                     </ul>
                     </div>
