Добавлен всплываюший блок при наведении на товар
Исправлены заголовки товаров.

--- a/catalog.html
+++ b/catalog.html
@@ -146,73 +146,73 @@
                         <li class="catalog-item">
                             <img src="img/goods/ice-cream-1.jpg" width="267" height="267" alt="Мороженое сливочное с апельсиновым джемом и цитрусовой стружкой фото">
                             <p class="catalog-item-price">310₽<span class="weight">/кг</span></p>
-                            <h3 class="catalog-item-title">Сливочное с апельсиновым джемом и цитрусовой стружкой</h3>
+                            <h3 class="catalog-item-title"><a href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a></h3>
                             <a href="#" class="btn item-btn">Быстрый просмотр</a>
                         </li>
                         <li class="catalog-item">
                             <img src="img/goods/ice-cream-2.jpg" width="267" height="267" alt="Мороженое сливочно-кофейное с кусочками шоколада фото">
                             <p class="catalog-item-price">380₽<span class="weight">/кг</span></p>
-                            <h3 class="catalog-item-title">Сливочно-кофейное с кусочками шоколада</h3>
+                            <h3 class="catalog-item-title"><a href="#">Сливочно-кофейное с кусочками шоколада</a></h3>
                             <a href="#" class="btn item-btn">Быстрый просмотр</a>
                         </li>
                         <li class="catalog-item">
                             <img src="img/goods/ice-cream-3.jpg" width="267" height="267" alt="Мороженое сливочно-клубничное с присыпкой из белого шоколада фото">
                             <p class="catalog-item-price">355₽<span class="weight">/кг</span></p>
-                            <h3 class="catalog-item-title">Сливочно-клубничное с присыпкой из белого шоколада</h3>
+                            <h3 class="catalog-item-title"><a href="#">Сливочно-клубничное с присыпкой из белого шоколада</a></h3>
                             <a href="#" class="btn item-btn">Быстрый просмотр</a>
                         </li>
                         <li class="catalog-item">
                             <img src="img/goods/ice-cream-4.jpg" width="267" height="267" alt="Мороженое сливочное крем-брюле с карамельной подливкой фото">
                             <p class="catalog-item-price">415₽<span class="weight">/кг</span></p>
-                            <h3 class="catalog-item-title">Сливочное крем-брюле с карамельной подливкой</h3>
+                            <h3 class="catalog-item-title"><a href="#">Сливочное крем-брюле с карамельной подливкой</a></h3>
                             <a href="#" class="btn item-btn">Быстрый просмотр</a>
                         </li>
                         <li class="catalog-item">
                             <img src="img/goods/ice-cream-5.jpg" width="267" height="267" alt="Мороженое сливочное с брусничным джемом фото">
                             <p class="catalog-item-price">325₽<span class="weight">/кг</span></p>
-                            <h3 class="catalog-item-title">Сливочное с брусничным джемом</h3>
+                            <h3 class="catalog-item-title"><a href="#">Сливочное с брусничным джемом</a></h3>
                             <a href="#" class="btn item-btn">Быстрый просмотр</a>
                         </li>
                         <li class="catalog-item">
                             <img src="img/goods/ice-cream-6.jpg" width="267" height="267" alt="Мороженое сливочно-черничное с цельными ягодами черники фото">
                             <p class="catalog-item-price">410₽<span class="weight">/кг</span></p>
-                            <h3 class="catalog-item-title">Сливочно-черничное с цельными ягодами черники</h3>
+                            <h3 class="catalog-item-title"><a href="#">Сливочно-черничное с цельными ягодами черники</a></h3>
                             <a href="#" class="btn item-btn">Быстрый просмотр</a>
                         </li>
                         <li class="catalog-item">
                             <img src="img/goods/ice-cream-7.jpg" width="267" height="267" alt="Мороженое сливочно-лимонное с карамельной присыпкой фото">
                             <p class="catalog-item-price">375₽<span class="weight">/кг</span></p>
-                            <h3 class="catalog-item-title">Сливочно-лимонное с карамельной присыпкой</h3>
+                            <h3 class="catalog-item-title"><a href="#">Сливочно-лимонное с карамельной присыпкой</a></h3>
                             <a href="#" class="btn item-btn">Быстрый просмотр</a>
                         </li>
                         <li class="catalog-item">
                             <img src="img/goods/ice-cream-8.jpg" width="267" height="267" alt="Мороженое сливочное с шоколадной стружкой фото">
                             <p class="catalog-item-price">320₽<span class="weight">/кг</span></p>
-                            <h3 class="catalog-item-title">Сливочное с шоколадной стружкой</h3>
+                            <h3 class="catalog-item-title"><a href="#">Сливочное с шоколадной стружкой</a></h3>
                             <a href="#" class="btn item-btn">Быстрый просмотр</a>
                         </li>
                         <li class="catalog-item">
                             <img src="img/goods/ice-cream-9.jpg" width="267" height="267" alt="Мороженое сливочно-ванильное с кусочками шоколада фото">
                             <p class="catalog-item-price">440₽<span class="weight">/кг</span></p>
-                            <h3 class="catalog-item-title">Сливочно-ванильное с кусочками шоколада</h3>
+                            <h3 class="catalog-item-title"><a href="#">Сливочно-ванильное с кусочками шоколада</a></h3>
                             <a href="#" class="btn item-btn">Быстрый просмотр</a>
                         </li>
                         <li class="catalog-item">
                             <img src="img/goods/ice-cream-10.jpg" width="267" height="267" alt="Мороженое сливочноe с ментоловым сиропом фото">
                             <p class="catalog-item-price">435₽<span class="weight">/кг</span></p>
-                            <h3 class="catalog-item-title">Сливочноe с ментоловым сиропом</h3>
+                            <h3 class="catalog-item-title"><a href="#">Сливочноe с ментоловым сиропом</a></h3>
                             <a href="#" class="btn item-btn item-btn">Быстрый просмотр</a>
                         </li>
                         <li class="catalog-item">
                             <img src="img/goods/ice-cream-11.jpg" width="267" height="267" alt="Мороженое сливочное с кусочками черного шоколада фото">
                             <p class="catalog-item-price">355₽<span class="weight">/кг</span></p>
-                            <h3 class="catalog-item-title">Сливочное с кусочками черного шоколада</h3>
+                            <h3 class="catalog-item-title"><a href="#">Сливочное с кусочками черного шоколада</a></h3>
                             <a href="#" class="btn item-btn">Быстрый просмотр</a>
                         </li>
                         <li class="catalog-item">
                             <img src="img/goods/ice-cream-12.jpg" width="267" height="267" alt="Мороженое сливочное с мятным сиропом фото">
                             <p class="catalog-item-price">420₽<span class="weight">/кг</span></p>
-                            <h3 class="catalog-item-title">Сливочное с мятным сиропом</h3>
+                            <h3 class="catalog-item-title"><a href="#">Сливочное с мятным сиропом</a></h3>
                             <a href="#" class="btn item-btn">Быстрый просмотр</a>
                         </li>
                     </ul>
