--- a/index.html
+++ b/index.html
@@ -126,25 +126,25 @@
                             <li class="catalog-item best-item">
                                 <img src="img/goods/ice-cream-1.jpg" width="267" height="267" alt="Мороженое сливочное с апельсиновым джемом и цитрусовой стружкой фото">
                                 <p class="catalog-item-price">310₽<span class="weight">/кг</span></p>
-                                <h3 class="catalog-item-title"><span>Сливочное с апельсиновым джемом и цитрусовой стружкой</span></h3>
+                                <h3 class="catalog-item-title"><a href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a></h3>
                                 <a href="#" class="btn item-btn">Быстрый просмотр</a>
                             </li>
                             <li class="catalog-item best-item">
                                 <img src="img/goods/ice-cream-2.jpg" width="267" height="267" alt="Мороженое сливочно-кофейное с кусочками шоколада фото">
                                 <p class="catalog-item-price">380₽<span class="weight">/кг</span></p>
-                                <h3 class="catalog-item-title"><span>Сливочно-кофейное с кусочками шоколада</span></h3>
+                                <h3 class="catalog-item-title"><a href="#">Сливочно-кофейное с кусочками шоколада</a></h3>
                                 <a href="#" class="btn item-btn">Быстрый просмотр</a>
                             </li>
                             <li class="catalog-item best-item">
                                 <img src="img/goods/ice-cream-3.jpg" width="267" height="267" alt="Мороженое сливочно-клубничное с присыпкой из белого шоколада фото">
                                 <p class="catalog-item-price">355₽<span class="weight">/кг</span></p>
-                                <h3 class="catalog-item-title"><span>Сливочно-клубничное с присыпкой из белого шоколада</span></h3>
+                                <h3 class="catalog-item-title"><a href="#">Сливочно-клубничное с присыпкой из белого шоколада</a></h3>
                                 <a href="#" class="btn item-btn">Быстрый просмотр</a>
                             </li>
                             <li class="catalog-item best-item">
                                 <img src="img/goods/ice-cream-4.jpg" width="267" height="267" alt="Мороженое сливочное крем-брюле с карамельной подливкой фото">
                                 <p class="catalog-item-price">415₽<span class="weight">/кг</span></p>
-                                <h3 class="catalog-item-title"><span>Сливочное крем-брюле с карамельной подливкой</span></h3>
+                                <h3 class="catalog-item-title"><a href="#">Сливочное крем-брюле с карамельной подливкой</a></h3>
                                 <a href="#" class="btn item-btn">Быстрый просмотр</a>
                             </li>
                         </ul>
