--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                             <li>
                                 <a   class="nav-main-item"href="catalog.html"><span>Каталог</span></a>
                                 <span class="visually-hidden">Категории каталога</span>
+                                <div class="navigation-popup-wrap">
                                     <ul class="navigation-popup">
                                         <li class="new-item"><a class="first-item"href="#">Новинки</a></li>
                                         <li><a href="catalog.html">Сливочное</a></li>
@@ -32,6 +33,7 @@
                                         <li><a href="#">Фруктовый лед</a></li>
                                         <li><a class="last-item" href="#">Мелонин</a></li>
                                     </ul>
+                                </div>
                             </li>
                             <li><a class="nav-main-item" href="#"><span>Доставка и оплата</span></a></li>
                             <li><a class="nav-main-item" href="#"><span>О Компании</span></a></li>
@@ -49,7 +51,6 @@
                                     class="visually-hidden" type="submit">Найти</button>
                             </form>
                             <a class="login-link nav-btn">Вход</a>
-                            <span class="visually-hidden">Форма входа</span>
                             <form class="login-btn-popup" name="login-form" id="login" action="https://echo.htmlacademy.ru"
                                 method="post">
                                 <label for="email" class="visually-hidden">Электронная почта</label>
@@ -154,23 +155,22 @@
                         <p class="slogan">Магазин Глэйси — это онлайн- и офлайн-магазин по продаже мороженого собственного
                             производства на развес</p>
                         <ul class="features-list">
-                            <li ><p class="feature-item-make">Все наше мороженое изготавливается на собственном
+                            <li class="feature-item"><p class="feature-item-make">Все наше мороженое изготавливается на собственном
                                 производстве, с использованием современного оборудования и проверенных временем
                                 технологий.</p>
                             </li>
-                            <li class="feature-item-consist"><p>Для приготовления мороженого используются настоящие
+                            <li class="feature-item"><p class="feature-item-consist">Для приготовления мороженого используются настоящие
                                 сливки и молоко высочайшего качества.
                                 Все дополнительные ингредиенты и добавки произведены из натурального, экологически
                                 чистого сырья.</p>
                             </li>
-                            <li class="feature-item-suppliers"><p>Закупка ингредиентов производится только у проверенных
+                            <li class="feature-item"><p class="feature-item-suppliers">Закупка ингредиентов производится только у проверенных
                                 фермерских хозяйств и компаний, с которыми нас связывает долговременное сотрудничество.</p>
 
                             </li>
-                            <li class="feature-item-delivery"><p>Доставка нашего мороженого до заказчиков осуществляется в
+                            <li class="feature-item"><p class="feature-item-delivery">Доставка нашего мороженого до заказчиков осуществляется в
                                 специальном термопаке, который не дает мороженому растаять в пути и позволяет сохранить
                                 превосходный вкус.</p>
-
                             </li>
                         </ul>
                     </section>
